# VisualHarmonyEngine

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.gradle  package-lock.json  package.json  settings.gradle
HarmonyEditor/: CMakeLists.txt
HarmonyEditor/src/: Application.cpp  EditorLayers.cpp  EditorLayers.h  EditorScene.cpp  EditorScene.h  Hierarchy.h  MenuBar.cpp  MenuBar.h  Settings.cpp  Settings.h  Theme.h  main.cpp
HarmonyEditor/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  RenderLayer.cpp  RenderLayer.h
HarmonyEngine/: CMakeLists.txt  HarmonyEngine.project  HarmonyEngine.workspace  clean
HarmonyEngine/assets/: default.frag.glsl  default.vert.glsl
HarmonyEngine/assets/shaders/: default.frag.glsl  default.vert.glsl  mesh.vert.glsl
HarmonyEngine/include/imgui/: CMakeLists.txt  imgui_demo.cpp
HarmonyEngine/include/json/: LICENSE.txt
HarmonyEngine/src/: Application.cpp  HarmonyEngine.h  Main.cpp  TestScene.cpp  TestScene.h  harmonypch.h  imguipch.h
HarmonyEngine/src/Core/: Assert.h  Display.cpp  Display.h  GameContext.cpp  GameContext.h  Input.cpp  Input.h  Log.cpp  Log.h  Utils.cpp  Utils.h
HarmonyEngine/src/Render/: Mesh.cpp  Mesh.h  RenderBatch.cpp  RenderBatch.h  RenderComponents.cpp  RenderComponents.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  Texture.cpp  Texture.h
HarmonyEngine/src/Scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.h  GameObject.cpp  GameObject.h  OrthographicCamera.cpp  OrthographicCamera.h  Scene.cpp  Scene.h
Playspace/: CMakeLists.txt
Playspace/src/: Application.cpp  EditorScene.cpp  Hierarchy.h  TestScene.cpp  TestScene.h
src/main/java/com/harmonygames/harmonyengine/: GameContext.java  Log.java
src/main/java/com/harmonygames/harmonyengine/display/: Display.java
src/main/java/com/harmonygames/harmonyengine/input/: StandardInput.java
src/main/java/com/harmonygames/harmonyengine/math/: Scale.java  Transform.java  Vector2f.java
src/main/java/com/harmonygames/harmonyengine/mesh/: Mesh.java  Mesh2D.java  MeshLoader.java
src/main/java/com/harmonygames/harmonyengine/object/: Camera.java  GameObject.java
src/main/java/com/harmonygames/harmonyengine/object/component/: Component.java  MeshRenderer.java  SpriteRenderer.java
src/main/java/com/harmonygames/harmonyengine/objects/: Camera.java  Component.java  GameObject.java
src/main/java/com/harmonygames/harmonyengine/objects/compoonents/: Component.java  Renderer.java  SpriteRenderer.java
src/main/java/com/harmonygames/harmonyengine/render/: RenderBatch.java  Renderer.java  Shader.java  Sprite.java  Texture.java
src/main/java/com/harmonygames/harmonyengine/scene/: Scene.java  SceneManager.java
src/main/java/com/harmonygames/harmonyengine/utils/: Assets.java  FileUtils.java
src/main/java/test/: Launcher.java  TestScene.java
src/main/resources/: default.glsl
src/main/resources/shaders/: default.glsl  fragment.glsl  sprite.glsl  vertex.glsl
(+4 files in other folders)
